--- a/package.json
+++ b/package.json
@@ -2,13 +2,29 @@
   "name": "dc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/bundle.cjs.js",
+  "module": "lib/bundle.esm.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "dev": "npm run build && node lib/bundle.esm.js ",
+    "test": "jest --no-cache"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "jsonpath": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^25.2.1",
+    "@types/jsonpath": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "^7.4.0",
+    "jest": "^25.3.0",
+    "rollup-plugin-sourcemaps": "^0.5.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "ts-jest": "^25.3.1",
+    "tslib": "^1.11.1",
+    "typescript": "^3.8.3"
   }
 }
