--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dc",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/bundle.cjs.js",
+  "main": "src/index.ts",
   "module": "lib/bundle.esm.js",
   "scripts": {
     "build": "rollup -c",
@@ -26,7 +26,8 @@
     "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-typescript": "^1.0.1",
     "ts-jest": "^25.3.1",
+    "ts-node": "^8.10.2",
     "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   }
 }
