--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
+    "allowJs": false,
     "target": "esnext",
     "noImplicitAny": true,
     "moduleResolution": "node",
