feat: build时生成d.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
     "esModuleInterop": true,
     "allowJs": false,
+    "declaration": true,
     "target": "esnext",
     "noImplicitAny": true,
     "moduleResolution": "node",
