--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "@gooqiao/json2json",
-  "version": "1.0.0",
+  "name": "data-reformat",
+  "version": "1.0.2",
   "description": "",
   "main": "lib/bundle.cjs.js",
   "module": "lib/bundle.esm.js",
   "scripts": {
     "build": "rollup -c",
     "dev": "npm run build && node lib/bundle.esm.js ",
-    "test": "jest --no-cache"
+    "test": "jest --no-cache",
+    "publish": "npm run build"
   },
+  "publishConfig": {},
   "author": "gooqiao",
   "license": "ISC",
   "repository": {
     "type": "git",
     "url": "git@github.com:gooqiao/json2json.git"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
   },
   "dependencies": {
     "@types/lodash": "^4.14.157",
@@ -31,7 +30,7 @@
     "eslint": "^7.4.0",
     "jest": "^25.3.0",
     "rollup-plugin-sourcemaps": "^0.5.0",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.27.1",
     "ts-jest": "^25.3.1",
     "ts-node": "^8.10.2",
     "tslib": "^1.11.1",
